--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -4,7 +4,7 @@
 }
 
 .csiLogo {
-    width: 27vw;
+    width: 24vw;
 }
 
 .titleText {
